# LifeApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: LifeAppCI.yml
forms/: Settings.ui  View.ui
include/App/: App.h
include/Controller/: Controller.h  Figures.h
include/View/: PlayGround.h  Settings.h  View.h
resource/: resource.qrc
src/: CMakeLists.txt  main.cpp
src/App/: App.cpp
src/Controller/: CntrlSettings.cpp  Controller.cpp  Figures.cpp
src/View/: PlayGround.cpp  Settings.cpp  View.cpp
